--- a/templates/group/list.html.twig
+++ b/templates/group/list.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="row">
-        <h1>Users</h1>
+        <h1>Groups</h1>
     </div>
     <div class="row">
         <table class="table">
