APP-5: Beautify templates

--- a/templates/group/edit.html.twig
+++ b/templates/group/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Edit group {{ group.name }}{% endblock %}
+
 {% block body %}
     <div class="row">
         <h1>Edit group {{ group.name }}</h1>
