--- a/templates/group/list.html.twig
+++ b/templates/group/list.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Groups{% endblock %}
+
 {% block body %}
     <div class="row">
         <h1>Groups</h1>
@@ -10,6 +12,7 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Name</th>
+                <th scope="col">Actions</th>
             </tr>
             </thead>
             <tbody>
