--- a/templates/group/new.html.twig
+++ b/templates/group/new.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Create group{% endblock %}
+
 {% block body %}
     <div class="row">
         <h1>Create group</h1>
