--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Edit user {{ user.name }}{% endblock %}
+
 {% block body %}
     <div class="row">
         <h1>Edit user {{ user.name }}</h1>
