--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Create user{% endblock %}
+
 {% block body %}
     <div class="row">
         <h1>Create user</h1>
